--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,21 @@
 services:
   genggam-makna-api:
-    image: "vinssdroid/genggam-makna-ml-api:v1"
+    image: "vinssdroid/genggam-makna-ml-bisindo-api:v1"
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: genggam-makna-ml-api
+    container_name: genggam-makna-ml-bisindo-api
     env_file:
-      - /opt/secrets/genggam-makna-ml-api.env
+      - /opt/secrets/genggam-makna-ml-bisindo-api.env
     ports:
-      - "4014:4014"
+      - "4015:4015"
     networks:
-      - nginx
+      - nginx-mailcow-host
     volumes:
       - /opt/secrets:/opt/secrets
     command:
       ["python3", "./app.py"]
 
 networks:
-  nginx:
+  nginx-mailcow-host:
     external: true
