--- a/.github/workflows/build-production.yml
+++ b/.github/workflows/build-production.yml
@@ -1,4 +1,4 @@
-name: Production Build ML API GenggamMakna
+name: Production Build ML API Genggam Makna
 
 on:
   push:
@@ -24,8 +24,8 @@ jobs:
 
 #      - name: Remove old Docker image
 #        run: |
-#          docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:v1 || true
-#          docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:${{ github.sha }} || true
+#          docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:v1.gcp || true
+#          docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:${{ github.sha }} || true
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
@@ -35,8 +35,8 @@ jobs:
           file: ./Dockerfile
           no-cache: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:v1
-            ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:${{ github.sha }}
+            ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:v1.gcp
+            ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:${{ github.sha }}
 
       - name: Save the private key as a temporary file
         run: |
@@ -48,36 +48,36 @@ jobs:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:v1 || true"
-          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-api:${{ github.sha }} || true"
+          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:v1.gcp || true"
+#          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker rmi -f ${{ secrets.DOCKER_USERNAME }}/genggam-makna-ml-bisindo-api:${{ github.sha }} || true"
 
       - name: Copy docker-compose.yml to VPS
         env:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          scp -o StrictHostKeyChecking=no -i private_key docker-compose.yml ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-apis/docker-compose.yml
+          scp -o StrictHostKeyChecking=no -i private_key docker-compose.yml ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-bisindo-apis/docker-compose.yml
 
       - name: Copy Dockerfile to VPS
         env:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          scp -o StrictHostKeyChecking=no -i private_key Dockerfile ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-apis/Dockerfile
+          scp -o StrictHostKeyChecking=no -i private_key Dockerfile ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-bisindo-apis/Dockerfile
 
       - name: Copy requirements.txt to VPS
         env:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          scp -o StrictHostKeyChecking=no -i private_key requirements.txt ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-apis/requirements.txt
+          scp -o StrictHostKeyChecking=no -i private_key requirements.txt ${VM_USER}@${VM_HOST}:/opt/ci-cd/genggam-makna-ml-bisindo-apis/requirements.txt
 
       - name: Stop existing containers on the server
         env:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker compose -f /opt/ci-cd/genggam-makna-ml-apis/docker-compose.yml down"
+          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "sudo docker compose -f /opt/ci-cd/genggam-makna-ml-bisindo-apis/docker-compose.yml down"
 
       - name: Delete old containers on server
         env:
@@ -85,7 +85,7 @@ jobs:
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "
-            sudo docker ps -a -q -f "name=genggam-makna-ml-api" | xargs -r docker rm
+            sudo docker ps -a -q -f "name=genggam-makna-ml-bisindo-api" | xargs -r docker rm
           "
 
       - name: Run SSH commands to update and run Docker Compose on VPS
@@ -93,7 +93,7 @@ jobs:
           VM_USER: ${{ secrets.VM_USER }}
           VM_HOST: ${{ secrets.VM_HOST }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} sudo docker compose -f /opt/ci-cd/genggam-makna-ml-apis/docker-compose.yml up -d --force-recreate --remove-orphans"
+          ssh -o StrictHostKeyChecking=no -i private_key ${VM_USER}@${VM_HOST} "DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} sudo docker compose -f /opt/ci-cd/genggam-makna-ml-bisindo-apis/docker-compose.yml up -d --force-recreate --remove-orphans"
 
       - name: Check container status
         env:
